# Reliability-Control-Streamflow

./: .gitattributes  .gitignore  Makefile  README.md  environment-cuda.yml  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
docs/: SUBMISSION_PROFILE.md
experiments/: README.md
experiments/_template/: config.yaml
experiments/_template/results/: metrics.json
experiments/exp001_gonogo/: basin_list_100.txt  basin_list_smoke_5.txt  config.yml  config_linux_gpu.yml  config_smoke_gpu.yml  hscc_analysis.py  select_basins.py
experiments/exp002/: audit_data_completeness.py  build_basin_list.py  config_dryrun.yml  config_full.yml  hscc_analysis_v2.py  run_full_pipeline.sh
experiments/exp002/ablation/: ABLATION_SUMMARY.json  run_ablations.py
experiments/exp003/: aggregate_a5_3seed.py  aggregate_loro.py  aggregated_metrics.json  build_loro_basin_lists.py  cookbook_predictability.py  cookbook_predictability_summary.json  hscc_analysis_loro.py  render_fold_configs.py  run_a5_3seed_failed_hucs.sh  run_loro_pipeline.sh  template_config.yml
experiments/exp003/basin_lists/: build_summary.txt  test_huc16.txt  train_huc01.txt  train_huc02.txt  train_huc03.txt  train_huc04.txt  train_huc05.txt  train_huc06.txt  train_huc07.txt  train_huc08.txt  train_huc09.txt  train_huc10.txt  train_huc11.txt  train_huc12.txt  train_huc13.txt  train_huc14.txt  (+4 more)
experiments/exp004/: hscc_analysis_gb.py  run_exp004_pipeline.sh
experiments/exp005/: metadata.json  run_pipeline.sh
experiments/exp006/: metadata.json  run_phase_a1.sh  run_pipeline.sh  run_smoke.sh  run_umal_gate.sh
experiments/exp007/: diagnose_g1_failure.py  run_mechanism_analysis.py
experiments/exp009/: metadata.json
experiments/exp010/: metadata.json  run_hopcpt.sh  run_hopcpt_multiseed.sh
experiments/exp011/: metadata.json
experiments/exp_CQR_GB/: metadata.json
experiments/exp_global_cqr/: metadata.json
paper/data/: metrics.json
scripts/: acquire_exemplars.py  call_codex.sh  consensus_round.sh  deploy_linux_gpu.sh  download_camels_gb.sh  download_data.py  evaluate.py  external_ai_review.py  preprocess.py  setup_data.sh  setup_env.sh  train.py
src/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py
tests/: conftest.py  test_external_report_intake.py
(+324 files in other folders)
